--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#D81B60</color>
 
     <color name="black_press">#404040</color>
+    <color name="history_color_bg_trip_status_ok">#ff00b4b1</color>
+    <color name="history_color_bg_trip_status_cancel">#CF2F1C</color>
 </resources>
